--- a/src/Countdown.css
+++ b/src/Countdown.css
@@ -1,27 +1,25 @@
 .countdown {
   background: linear-gradient(#0b8992, #8ce7ee);
   color: white;
-  font-size: 1.8rem;
-  padding: 30px;
-  border: 10px;
-  width: auto;
+  font-size: 1.5rem;
+  padding: 20px;
+  max-width: 700px;
+  margin: auto;
   flex-wrap: wrap;
+  border: 5px rgb(118, 217, 241);
+  border-style: none groove none groove;
 }
 
 .countdown__icons {
   cursor: pointer;
-  display: none;
   float: right;
-  font-size: 1.8rem;
-  margin-left: 60px;
+  font-size: 1.5rem;
   display: flex;
 }
 
-.text {
-  float: right;
-}
-
-.checked {
-  text-decoration: line-through;
-  color: green;
+.checkbox {
+  width: 20px;
+  height: 20px;
+  display: block;
+  margin-right: 10px;
 }
